--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-    "name": "TheMystic-Bot-MD",
-    "description": "Un chatbot automatizado para WhatsApp basado en Node.js, que permite realizar múltiples funciones y personalizaciones en la plataforma.",
-    "repository": "https://github.com/BrunoSobrino/TheMystic-Bot-MD",
-    "logo": "https://i.ibb.co/Qn1W6cP/image.png"
-  }
+  "name": "TheMystic-Bot-MD",
+  "description": "Un chatbot automatizado para WhatsApp basado en Node.js, que permite realizar múltiples funciones y personalizaciones en la plataforma.",
+  "repository": "https://www.instagram.com/ineffable.mvrco",
+  "logo": "https://ibb.co/Tq9tynk"
+}
