--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "name": "TheMystic-Bot-MD",
   "description": "Un chatbot automatizado para WhatsApp basado en Node.js, que permite realizar múltiples funciones y personalizaciones en la plataforma.",
-  "repository": "https://www.instagram.com/ineffable.mvrco",
+  "repository": "https://www.instagram.com/Pastelito.ff",
   "logo": "https://ibb.co/Tq9tynk"
 }
